fixed textarea text alignment and replaced blurry newsletter image

--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,22 @@ fieldset {
   box-sizing: border-box;
   }
 
-input, select, textarea {
-  color:gray;
+input, select {
+  color:darkgray;
   background-color: gainsboro;
   text-align: right;
   box-sizing: border-box;
   border-color: transparent;
   }
+
+textarea {
+  color:darkgray;
+  background-color: gainsboro;
+  text-align: left;
+  box-sizing: border-box;
+  border-color: transparent;
+
+}
 
 input[type=checkbox]{
     cursor: pointer;
@@ -201,7 +210,7 @@ footer {
 
 
 :root {
-  background-color: honeydew;
+  background-color: #f6f4f5;
   color:gray;
   }
 
